[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1051 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
 <script type="text/javascript" src="org/kbinani/vsq/BPPair.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqNote.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/MidiEvent.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/MidiFile.js"></script>
+<script type="text/javascript" src="org/kbinani/PortUtil.js"></script>
+<script type="text/javascript" src="org/kbinani/ByRef.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
