[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1052 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -9,6 +9,13 @@
 <script type="text/javascript" src="org/kbinani/vsq/MidiFile.js"></script>
 <script type="text/javascript" src="org/kbinani/PortUtil.js"></script>
 <script type="text/javascript" src="org/kbinani/ByRef.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/DynamicsMode.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/PlayMode.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqCommon.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqMixerEntry.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqMixer.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqMaster.js"></script>
+<script type="text/javascript" src="org/kbinani/Cp932.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
