[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1053 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -16,6 +16,8 @@
 <script type="text/javascript" src="org/kbinani/vsq/VsqMixer.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqMaster.js"></script>
 <script type="text/javascript" src="org/kbinani/Cp932.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqPhoneticSymbol.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/Lyric.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
@@ -115,7 +117,7 @@
     display: block;
 }
 </style>
-<title>test</title>
+<title>Cadencii</title>
 </head>
 <body>
 <div id="dropbox" style="top: 0px; left: 0px; width: 100%; height: 100%; background-color: gray; position: absolute; overflow: hidden; display: block;">
