[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1054 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -18,6 +18,13 @@
 <script type="text/javascript" src="org/kbinani/Cp932.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqPhoneticSymbol.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/Lyric.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqHandleType.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/IconHandle.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/LyricHandle.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VibratoBPPair.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VibratoBPList.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/IconParameter.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/NoteHeadHandle.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
