[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1057 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -27,6 +27,11 @@
 <script type="text/javascript" src="org/kbinani/vsq/NoteHeadHandle.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VibratoHandle.js"></script>
 <script type="text/javascritp" src="org/kbinani/vsq/IconDynamicsHandle.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/TextStream.js"></script>
+<script type="text/javascript" src="org/kbinani/printf.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqHandle.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqBPPair.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqBPPairSearchContext.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
