[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1058 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -32,6 +32,11 @@
 <script type="text/javascript" src="org/kbinani/vsq/VsqHandle.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqBPPair.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqBPPairSearchContext.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqBPList.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqIDType.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqID.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqEvent.js"></script>
+<script type="text/javascript" src="org/kbinani/ArrayIterator.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
