--- a/test.html
+++ b/test.html
@@ -37,6 +37,11 @@
 <script type="text/javascript" src="org/kbinani/vsq/VsqID.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqEvent.js"></script>
 <script type="text/javascript" src="org/kbinani/ArrayIterator.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqEventList.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqVoiceLanguage.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VocaloSysUtil.js"></script>
+<script type="text/javascript" src="org/kbinani/ValuePair.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqMetaText.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
