[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1060 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -42,6 +42,10 @@
 <script type="text/javascript" src="org/kbinani/vsq/VocaloSysUtil.js"></script>
 <script type="text/javascript" src="org/kbinani/ValuePair.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqMetaText.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/IndexIteratorKind.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqTrack.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/TimeSigTableEntry.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/TempoTableEntry.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
