--- a/test.html
+++ b/test.html
@@ -46,6 +46,8 @@
 <script type="text/javascript" src="org/kbinani/vsq/VsqTrack.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/TimeSigTableEntry.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/TempoTableEntry.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/TempoVector.js"></script>
+<script type="text/javascript" src="org/kbinani/vsq/VsqFile.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
 .wkey{
