[Cadencii/trunk] (ry
git-svn-id: https://svn.sourceforge.jp/svnroot/cadencii/Cadencii/trunk@1064 9d680d4f-cbfa-477e-9905-73dbafb9b024

--- a/test.html
+++ b/test.html
@@ -51,6 +51,8 @@
 <script type="text/javascript" src="org/kbinani/vsq/TempoVector.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqFile.js"></script>
 
+<script type="text/javascript" src="org/kbinani/cadencii/DrawObjectType.js"></script>
+<script type="text/javascript" src="org/kbinani/cadencii/DrawObject.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/EditorConfig.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/AppManager.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/PictPianoRoll.js"></script>
