--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <script type="text/javascript" src="org/kbinani/awt.js"></script>
@@ -52,18 +52,21 @@
 <script type="text/javascript" src="org/kbinani/vsq/VsqFile.js"></script>
 <script type="text/javascript" src="org/kbinani/vsq/VsqBarLineType.js"></script>
 
+<script type="text/javascript" src="org/kbinani/cadencii/RgbColor.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/DrawObjectType.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/DrawObject.js"></script>
+<script type="text/javascript" src="org/kbinani/cadencii/QuantizeMode.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/EditorConfig.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/AppManager.js"></script>
 <script type="text/javascript" src="org/kbinani/cadencii/PictPianoRoll.js"></script>
+<script type="text/javascript" src="org/kbinani/cadencii/QuantizeModeUtil.js"></script>
 <script type="text/javascript" src="main.js"></script>
-<title>Cadencii</title>
+<title>Untitled - Cadencii</title>
 </head>
 <body>
 <div id="dropbox" style="top: 0px; left: 0px; width: 100%; height: 100%; background-color: gray; position: absolute; overflow: hidden; display: block;">
-<canvas id="pictPianoroll" style="width: 100%; height: 100%;">
-</canvas>
+<div id="divPictPianoRoll" style="top: 0px; left: 0px; width: 100%; height: 100%;"><canvas id="pictPianoRoll" style="width: 100%; height: 100%;"></canvas></div>
+<div id="divTrackSelector" style="top: 0px; left: 0px; width: 100%; height: 100%;"><canvas id="trackSelector" style="width: 100%; height: 100%;"></canvas></div>
 </div>
 </body>
 </html>
